--- a/src/main/resources/templates/factura/form.html
+++ b/src/main/resources/templates/factura/form.html
@@ -54,7 +54,7 @@
 						</div>
 					</div>
 
-					
+					<table th:replace="factura/plantilla-items :: itemsFactura"></table>
 
 					<table id="cargarItemProductos"
 						class="table table-sm table-striped table-hover">
